--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,2 @@
-{
-    "version":2,
-    "builds":[
-        {
-            "src":"index.js",
-            "use":"@vercel/node"
-        }
-    ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"index.jd"
-        }
-    ]
-}
+
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
