--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,9 @@
 
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+  }
