--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
-
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
       {
-        "source": "/(.*)",
-        "destination": "/index.html"
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "destination": "/"
       }
     ]
   }
