--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,7 @@
         "src": "/(.*)",
         "destination": "/"
       }
-    ]
+    ],
+      "src": "/api/*",
+      "dest": "/api/index.js"
   }
