--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.3",
     "vite": "^5.0.11"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
