--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT=3000
 secretKey=madankhadka
 EMAIL_USER=khadkadeepak2057@gmail.com
 EMAIL_PASS=sfsbbyomcqvkuxla
+BACKEND_URL=https://demo-ws9m.onrender.com/
