--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "adminSeeder.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
