--- a/.env
+++ b/.env
@@ -3,5 +3,4 @@ PORT=3000
 secretKey=madankhadka
 EMAIL_USER=khadkadeepak2057@gmail.com
 EMAIL_PASS=sfsbbyomcqvkuxla
-BACKEND_URL=http://localhost:3000/
-# BACKEND_URL=https://demo-ws9m.onrender.com/
+BACKEND_URL=https://demo-ws9m.onrender.com/
