--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGO_URL=mongodb+srv://khadkamadan205729:khadkamadan205729@cluster0.2w173jt.mongodb.net/?retryWrites=true&w=majority
-PORT=3000
+PORT=3001
 secretKey=madankhadka
 EMAIL_USER=khadkadeepak2057@gmail.com
 EMAIL_PASS=sfsbbyomcqvkuxla
-BACKEND_URL=https://demo-ws9m.onrender.com/
+BACKEND_URL=http://localhost:3001/
+# BACKEND_URL=https://demo-ws9m.onrender.com/
