--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ PORT=3001
 secretKey=madankhadka
 EMAIL_USER=khadkadeepak2057@gmail.com
 EMAIL_PASS=sfsbbyomcqvkuxla
-BACKEND_URL=http://localhost:3001/
+BACKEND_URL=https://foodorder-8jma.onrender.com/
 # BACKEND_URL=https://demo-ws9m.onrender.com/
